2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* frameworks.xml:
	* MonoDevelop.Core.mdp:
	* MonoDevelop.Core/SystemPackage.cs:
	* MonoDevelop.Core/TargetFramework.cs:
	* MonoDevelop.Core/SystemAssemblyService.cs:
	* MonoDevelop.Core.AddIns/PackageExtensionNode.cs:
	* MonoDevelop.Core.Serialization/ISerializationAttributeProvider.cs:
	Implemented support for multiple frameworks in SystemAssemblyService.
	Until now it was supporting multiple CLRs, but this model did not fit
	very well with the Visual Studio model.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.mdp: Don't require a specific version of Mono.Addins.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/IAsyncOperation.cs:
	* MonoDevelop.Core.Execution/ProcessWrapper.cs:
	* MonoDevelop.Core.ProgressMonitoring/NullAsyncOperation.cs:
	* MonoDevelop.Core.ProgressMonitoring/NullProgressMonitor.cs:
	* MonoDevelop.Core.ProgressMonitoring/AggregatedProgressMonitor.cs:
	Implement new SuccessWithWarnings property.

2008-12-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel builds.

	* MonoDevelop.Core/PropertyService.cs: Set the FirstRun flag when the
	properties file is not present.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.mdp: Fix Makefile integration for AssemblyInfo.cs
	files.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs:
	* AssemblyInfo.cs.in:
	* MonoDevelop.Core.mdp: Add AssemblyInfo.cs files that are autogenerated
	from the addin manifests.

2008-11-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core/Properties.cs: Copy properties file to backup when
	saving it. Restore the backup if the save fails.

	* MonoDevelop.Core/PropertyService.cs: Catch and report errors when
	loading config file, and fall back to trying previous settings file.
	Prevents MD crash.
